# registre_de_securite

./: CLAUDE.md  README.md  bump.config.ts  index.html  package.json  tailwind.config.js
.claude/skills/commit/: SKILL.md
.github/workflows/: release.yml
scripts/: sync-version.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/sql/: migration_v2.sql  schema.sql  v2_signature_sheets.sql  v3_classeurs.sql  v4_etablissement.sql  v6_quadriennal.sql  v7_garde_pages.sql  v8_rename_intercalaires.sql
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: app.rs  files.rs  mod.rs  pdf.rs
src/assets/: license.txt
src/components/: MermaidBlock.tsx  NavItem.tsx  Sidebar.tsx
src/components/fallback/: LoadingSpinner.tsx
src/components/print/: A4Page.tsx  ClasseurCoverPage.tsx  CoverPage.tsx  DocumentPages.tsx  IntercalaireSheet.tsx  PageFooter.tsx  PrintPreview.tsx  SignatureSheetPage.tsx  TableOfContentsPage.tsx  TrackingSheetPage.tsx
src/components/ui/: checkbox.tsx  input.tsx
src/features/merge/: MergePreviewDialog.tsx
src/features/settings/: SettingsDialog.tsx
src/layouts/: RootLayout.tsx
src/lib/: events.ts  exportMarkdown.ts  navigation.ts  utils.ts
src/lib/db/: sqlite.ts
src/lib/dnd/: DndProvider.tsx  useDndRegistry.ts
src/lib/hooks/: useChapterZoom.ts  useQuery.ts
src/lib/print/: buildPrintHtml.ts  constants.ts  downloadPdf.ts  paginate.ts  printIframe.ts
src/pages/chapter/: A4Preview.tsx  ChapterPage.tsx  CreateItemDialog.tsx  DeleteIntercalaireDialog.tsx  DeleteSignatureSheetDialog.tsx  types.ts  (+7 more)
src/styles/: globals.css
(+6 files in other folders)
