[package]
name = "registre-de-securite"
version = "0.2.0"
description = "Registre de Sécurité ERP — Application de gestion"
authors = ["you"]
edition = "2021"

[lib]
name = "registre_de_securite_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
image = { version = "0.25", default-features = false, features = ["png"] }
dirs = "6"
